# multi-agent-productivity-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.py  cloudrun-service.yaml  cloudshell_start.sh  conftest.py  deploy.sh  entrypoint.sh  fix_tests.py  log.txt  pyproject.toml  pytest_out.txt  report.xml  requirements-test.txt  requirements.txt  run_local.sh  seed_data.py  setup_alloydb.sh  start.sh  test_agents.py  test_multi_agent.py  test_output.txt  test_schemas.py  test_utils.py  upgrade_alloydb.sh
alembic/: env.py
alembic/versions/: 001_initial.py
backend/: config.py  exceptions.py  main.py  middleware.py  schemas.py  utils.py
backend/agents/: base.py  calendar_agent.py  notes_agent.py  orchestrator.py  task_agent.py
backend/database/: connection.py  crud.py  models.py  setup_vector.py
backend/mcp_servers/: __init__.py  calendar_server.py  notes_server.py  tasks_server.py
conductor/: hackathon_winning_plan.md
frontend/: index.html
